exclude featured jobs for normal section
