# src/api/docs/swagger.yaml
@@ -185,6 +185,12 @@ paths:
           schema:
             type: boolean
           description: When passing true, the API will load all featured and showInHotList jobs at once
+        - in: query
+          name: featured
+          required: false
+          schema:
+            type: boolean
+          description: The featured job or not
       responses:
         "200":
           description: OK
@@ -258,6 +264,12 @@ paths:
           schema:
             type: boolean
           description: When passing true, the API will load all featured and showInHotList jobs at once
+        - in: query
+          name: featured
+          required: false
+          schema:
+            type: boolean
+          description: The featured job or not
       requestBody:
         content:
           application/json:
